# tg_gpt_bot

./: .dockerignore  Dockerfile  main.py  pyproject.toml
core/: settings.py
core/database/: db.py  schema.py
src/: gpt.py  keyboards.py
src/handlers/: __init__.py  callbacks.py  commands.py  messages.py
